- Implemented FR #50692, not uploaded files don't count towards
  max_file_uploads limit. As a side improvement, temporary files are not opened
  for empty uploads and, in debug mode, 0-length uploads. (Gustavo)
- Added a 3rd parameter to get_html_translation_table. It now takes a charset
  hint, like htmlentities et al. (Gustavo)

- Fixed NULL pointer dereference in ZipArchive::getArchiveComment.
  (CVE-2010-3709). (Maksymilian Arciemowicz)
- Fixed possible flaw in open_basedir (CVE-2010-3436). (Pierre)
- Fixed MOPS-2010-24, fix string validation. (CVE-2010-2950). (Pierre)
- Fixed symbolic resolution support when the target is a DFS share. (Pierre)
- Changed deprecated ini options on startup from E_WARNING to E_DEPRECATED. 
  (Kalle)
- Changed the $context parameter on copy() to actually have an effect. (Kalle)
- Fixed possible crash in mssql_fetch_batch(). (Kalle)
- Fixed inconsistent backlog default value (-1) in FPM on many systems. (fat)
- Fixed bug in the Windows implementation of dns_get_record, where the two
  last parameters wouldn't be filled unless the type were DNS_ANY (Gustavo).
- Fixed forward stream seeking emulation in streams that don't support seeking
  in situations where the read operation gives back less data than requested
  and when there was data in the buffer before the emulation started. Also made
  more consistent its behavior -- should return failure every time less data
  than was requested was skipped. (Gustavo)
- Fixed htmlentities/htmlspecialchars accepting certain ill-formed UTF-8
  sequences. (Gustavo)
- Fixed bug #52929 (Segfault in filter_var with FILTER_VALIDATE_EMAIL with
  large amount of data) (CVE-2010-3710). (Adam)

- Fixed bug #53144 (Segfault in SplObjectStorage::removeAll()). (Felipe)
- Fixed bug #53071 (SPLObjectStorage defeats gc_collect_cycles). (Gustavo)
- Fixed bug #53006 (stream_get_contents has an unpredictable behavior when the
  underlying stream does not support seeking). (Gustavo)